@@ -1,21 +1,21 @@
 package io.github.maodua.wrench.pager.aop;
 
+import com.github.pagehelper.Page;
+import io.github.maodua.wrench.pager.autoconfigure.WrenchPagerConfigure;
+import io.github.maodua.wrench.pager.exception.PagerException;
+import io.github.maodua.wrench.pager.handler.IPageDataHandler;
 import org.aspectj.lang.ProceedingJoinPoint;
 import org.aspectj.lang.annotation.Around;
 import org.aspectj.lang.annotation.Aspect;
 import io.github.maodua.wrench.common.util.Servlets;
 import io.github.maodua.wrench.common.util.Springs;
 import io.github.maodua.wrench.pager.annotation.Pager;
-import io.github.maodua.wrench.pager.bo.PageBody;
 import io.github.maodua.wrench.pager.handler.IResultHandler;
-import io.github.maodua.wrench.pager.handler.DefaultResultHandler;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import com.github.pagehelper.PageHelper;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 /**
  * 分页插件
@@ -23,6 +23,9 @@ import java.util.Optional;
 @Component
 @Aspect
 public class PagerPlugin {
+
+    @Autowired
+    private WrenchPagerConfigure pagerConfigure;
 
 
     @Around("@annotation(pager)")
@@ -39,44 +42,66 @@ public class PagerPlugin {
 
 
         // 3. 修改返回值并返回
-
         // 空值不处理
         if (returnObject == null) return null;
+
         // 获取返回值处理器
-        var resultHandler = Springs.getBeansList(IResultHandler.class).stream().findFirst().orElse(new DefaultResultHandler());
-        // 获取数据
-        var data = resultHandler.getData(returnObject);
-        // 返回值 data 为空，返回空list
-        if (data == null) {
-            resultHandler.setData(returnObject, Collections.emptyList());
-        }
-        // 返回值是集合添加分页属性
-        if (data instanceof Collection){
-            @SuppressWarnings("unchecked")
-            var pageBody = new PageBody()
-                .setPage(localPage.getPageNum())
-                .setTotalRow(localPage.getTotal())
-                .setTotalPage(localPage.getPages())
-                .setListData(List.copyOf((Collection) data));
-            resultHandler.setData(returnObject, pageBody);
-        }
+        var resultHandler = Springs.getBeansList(IResultHandler.class).stream().findFirst().orElseThrow(() -> new  PagerException("没有找到返回值处理器。"));
+        // 获取查询结果
+        var queryData = resultHandler.getData(returnObject);
+
+        // 查询结果为空，返回空list
+        if (queryData == null) resultHandler.setData(returnObject, Collections.emptyList());
+
+        // 获取分页数据处理器
+        var pageDataHandler = Springs.getBeansList(IPageDataHandler.class).stream().findFirst().orElseThrow(() -> new PagerException("没有找到返回结果处理器"));
+        var pageDate = pageDateObject(pageDataHandler, localPage, queryData);
+        resultHandler.setData(returnObject, pageDate);
 
         return returnObject;
     }
 
+    /**
+     * 设置分页参数
+     * @param pager 分页相关的默认值
+     */
     void setPager(Pager pager){
         // 获取Request请求中的参数
-        var pageStr = Servlets.getRequest().getParameter("page");
-        var pageSizeStr = Servlets.getRequest().getParameter("pageSize");
+        var pageStr = Servlets.getRequest().getParameter(pagerConfigure.getPage());
+        var pageSizeStr = Servlets.getRequest().getParameter(pagerConfigure.getPageSize());
 
         // 页数 和 页大小
-        int page = Optional.ofNullable(pageStr).map(Integer::getInteger).orElse(pager.page());
-        int pageSize = Optional.ofNullable(pageSizeStr).map(Integer::getInteger).orElse(pager.pageSize());
+        int page = Optional.ofNullable(pageStr).map(Integer::valueOf).orElse(pager.page());
+        int pageSize = Optional.ofNullable(pageSizeStr).map(Integer::valueOf).orElse(pager.pageSize());
         pageSize = Math.min(Math.max(pageSize, pager.minSize()),pager.maxSize());
 
         // 设置分页属性
         PageHelper.clearPage();
         PageHelper.startPage(page, pageSize);
+    }
+
+    /**
+     * 分页数据对象处理
+     * @param handler 分页数据处理器
+     * @param page 分页数据
+     * @param queryData 查询结果
+     * @return 分页数据
+     */
+    Object pageDateObject(IPageDataHandler handler, Page<Object> page, final Object queryData){
+        handler.setWrenchPage(page.getPageNum());
+        handler.setWrenchPageSize(page.getPageSize());
+        handler.setWrenchTotalRow(page.getTotal());
+        handler.setWrenchTotalPage(page.getPages());
+
+        if (queryData instanceof Collection ){
+            // 查询结果是集合添加分页属性
+            handler.setWrenchData((Collection) queryData);
+
+        }else {
+            // 查询结果不是集合自动装成集合
+            handler.setWrenchData(List.of(queryData));
+        }
+        return handler;
     }
 
 }
